# tools-barebone

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  docker-compose-tests.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.docker_files/: apache-site.conf  apache_run.sh  create_secret_key.sh
.github/workflows/: ci.yml  dockerhub.yml  dockerimage.yml  precommit.yml  publishdocker.yml
admin-tools/: run-docker.sh
misc/: README_DEPLOY_REVERSE_PROXY.md
src/tools_barebone/: __init__.py
tests/: conftest.py
tests/structure_converters/: test_converters.py
tests/structure_converters/test_converters/: test_send_valid_structure_castep_ase_quartz_cell_.csv  test_send_valid_structure_castep_ase_quartz_cell_.yml  test_send_valid_structure_cif_ase_1011169_cif_.csv  test_send_valid_structure_cif_ase_1011169_cif_.yml  test_send_valid_structure_cif_pymatgen_1011169_cif_.csv  test_send_valid_structure_cif_pymatgen_1011169_cif_.yml  test_send_valid_structure_pdb_ase_bto_pdb_.yml  test_send_valid_structure_qeinp_qetools_qe2_in_.csv  test_send_valid_structure_qeinp_qetools_qe2_in_.yml  test_send_valid_structure_vasp_ase_POSCAR_1_.csv  test_send_valid_structure_vasp_ase_POSCAR_1_.yml  (+3 more)
tools_barebone/: __init__.py
tools_barebone/structure_importers/: __init__.py
webservice/: README_DEPLOY.md  conf.py  run_app.py  web_module.py
webservice/templates/: base.html  tools_barebone.html  visualizer_select_base.html  visualizer_select_full.html  visualizer_select_structure.html
webservice/tools_barebone/: __init__.py
(+9 files in other folders)
