[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tools-barebone"
version = "1.4.0"
requires-python = ">= 3.8"
readme = "README.md"

dependencies = [
  "Flask~=2.3.2",
  "numpy~=1.26.0",
  "pyyaml~=6.0.1",
  "packaging==23.1",
  "ase~=3.21.1",
  "qe-tools~=2.2.0",
  "pymatgen==2024.5.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit~=2.9.2",
  "pylint~=2.4.4",
  "prospector~=1.2.0",
  "pytest~=8.2.0",
  "pytest-selenium~=4.1.0",
  "selenium~=4.20",
  "pytest-regressions~=2.5.0",
  "urllib3~=1.26",
]
